14-Aug-2015 Laurent Duflot
	* MCInfoProcessor: add option to produce a JSON file with hardproc
	informations to allow building a DB of initial harproc counts
	(needed for proper normalisation of multi process samples)
	* zson.config: example config file for a job producing json hardproc file.
	* BuidSUSYObjects: switch to default SUSYTools for JVT (jet and MET)
	* PhysObjProxies: add isSignal() method to JetProxy
	* ZeroLeptionCRWT: adapt to interface change in JetProxy

12-Aug-2015 Laurent Duflot
	* zerolepton.config: comment out second PRW file (25ns) as both files
	seem to be combined in the tool for 50ns reweighting.
	* FilterUpdateMerge.py: set batch mode.
	* PhysObjProxyUtils: calculate sphericity/aplanarity for jets>40GeV


11-Aug-2015 Laurent Duflot
	* mc15_13TeV_MCSampleList.py: update diboson list
	* buildRSEFileList: build pickle file with datasets on storage element
	* getMCInfo.py, FilterUpdateMerge.py: allow to use pickle file as file
	input list
	* README: update with merging using files on storage element

07-Aug-2015 Laurent Duflot
	* upgrade to SUSYTools-00-06-19
	new Btagging recommandations and working point
	new muon isaolation scale factors
	muon default acceptance up to 2.5 instead of 2.4
	some cross-section /  kfactor updates
	* BuildSUSYObject: switch on muon isolation scale factors
	* INSTALL: update instruction for new SUSYTools
	* launch_jobs_on_grid.py: update to new files in CDIFiles
	* SR and CRxx: move RJigsawInit() to the the begin() method.


07-Aug-2015 Laurent Duflot
	* BuildSUSYObject: do not try to extract photon scale factor for data
	Committed revision 688047

06-Aug-2015 Laurent Duflot
	* launch_jobs_on_grid.py: make CDIFiles available on the grid
	* PhysObjProxyUtils: fix typo in delete conditions leading to memory leaks
	* zerolepton.config: single switch for filling RJigsawVars block
	* ZeroLeptonNTVars: switch caching off for output trees, set flush/save size explicitely to control memory footprint