@@ -1,6 +1,13 @@
 #include "ZeroLeptonRun2/ZeroLeptonCRY.h"
 #include "ZeroLeptonRun2/PhysObjProxies.h"
 
+#include "ElectronPhotonSelectorTools/IAsgPhotonIsEMSelector.h"
+#include "AsgTools/IAsgTool.h"
+#include "PATCore/IAsgSelectionTool.h"
+#include "ElectronPhotonSelectorTools/AsgElectronIsEMSelector.h"
+#include "ElectronPhotonSelectorTools/AsgPhotonIsEMSelector.h"
+#include "ElectronPhotonSelectorTools/AsgElectronLikelihoodTool.h"
+#include "ElectronPhotonShowerShapeFudgeTool/ElectronPhotonShowerShapeFudgeTool.h"
 
 #include "xAODRootAccess/TEvent.h"
 #include "xAODRootAccess/TActiveStore.h"
@@ -29,6 +36,7 @@ ZeroLeptonCRY::ZeroLeptonCRY(const char *name)
     m_fillTRJigsawVars(true),
     m_fillReclusteringVars(true),
     m_IsData(false),
+    m_photonSelIsEM(""),
     m_IsTruth(false),
     m_IsSignal(false),
     m_DoSystematics(false),
@@ -68,6 +76,32 @@ ZeroLeptonCRY::ZeroLeptonCRY(const char *name)
   m_proxyUtils = PhysObjProxyUtils(m_IsData);
 
   m_ZLUtils = ZeroLeptonUtils(m_IsData, m_derivationTag);
+
+  string m_phId = "Tight";
+
+  if (m_photonSelIsEM.empty()) {
+    if ( asg::ToolStore::contains<AsgPhotonIsEMSelector>("PhotonSelIsEM_" + m_phId) ) {
+      m_photonSelIsEM = asg::ToolStore::get<AsgPhotonIsEMSelector>("PhotonSelIsEM_" + m_phId);
+    } else {
+      AsgPhotonIsEMSelector* photonSelIsEM = new AsgPhotonIsEMSelector("PhotonSelIsEM_" + m_phId);
+      if (m_phId == "Tight" ) {
+	photonSelIsEM->setProperty("ConfigFile", "ElectronPhotonSelectorTools/offline/mc15_20150429/PhotonIsEMTightSelectorCutDefs.conf") ;
+        photonSelIsEM->setProperty("isEMMask", static_cast<unsigned int> (egammaPID::PhotonTight) );
+      }
+      if (m_phId == "Medium" ) {
+        photonSelIsEM->setProperty("ConfigFile", "ElectronPhotonSelectorTools/offline/mc15_20150429/PhotonIsEMMediumSelectorCutDefs.conf") ;
+        photonSelIsEM->setProperty("isEMMask", static_cast<unsigned int> (egammaPID::PhotonMedium) );
+      }
+      if (m_phId == "Loose" ) {
+        photonSelIsEM->setProperty("ConfigFile", "ElectronPhotonSelectorTools/offline/mc15_20150429/PhotonIsEMLooseSelectorCutDefs.conf") ;
+        photonSelIsEM->setProperty("isEMMask", static_cast<unsigned int> (egammaPID::PhotonLoose) );
+      }
+      photonSelIsEM->initialize() ;
+      m_photonSelIsEM = photonSelIsEM;
+    }
+  }
+
+
 }
 
 ZeroLeptonCRY::~ZeroLeptonCRY()
@@ -266,10 +300,12 @@ bool ZeroLeptonCRY::processEvent(xAOD::TEvent& event)
   std::vector<float> vtopoetcone40;
   std::vector<float> vptvarcone40;
   std::vector<float> vptcone40;
-
-  //std::vector<int> visEMTight;
+  std::vector<int>   vtruthType;
+  std::vector<int>   vtruthOrigin;
+  std::vector<int> visEMvalue;
   std::vector<float> vpt;
   std::vector<float> veta;
+
   if(! m_IsTruth){
     if ( !store->retrieve(phContainer,"SUSYPhotons"+m_suffix).isSuccess() ){
       throw std::runtime_error("Could not retrieve PhotonContainer with key SUSYPhotons"+m_suffix);
@@ -297,6 +333,23 @@ bool ZeroLeptonCRY::processEvent(xAOD::TEvent& event)
       vptvarcone40.push_back(ptvarcone40);
       vtopoetcone40.push_back(topoetcone40);
       vptcone40.push_back(ptcone40);
+
+      int isEMvalue = -1000;
+      if(!m_photonSelIsEM.empty()){
+        isEMvalue = m_photonSelIsEM->IsemValue();
+      }
+      visEMvalue.push_back(isEMvalue);
+
+      if(!m_IsData){
+        vtruthType.push_back((*phit)->auxdata<int>("truthType"));
+        vtruthOrigin.push_back((*phit)->auxdata<int>("truthOrigin"));
+      }
+      else{
+        vtruthType.push_back(-1000);
+        vtruthOrigin.push_back(-1000);
+      }
+
+
       //
       vpt.push_back((*phit)->pt());
       veta.push_back((*phit)->eta());
@@ -499,7 +552,7 @@ bool ZeroLeptonCRY::processEvent(xAOD::TEvent& event)
 
   if(m_doSmallNtuple) { 
     unsigned int runnum = RunNumber;
-    if ( ! m_IsData ) runnum = mc_channel_number;
+    if ( ! m_IsData && ! m_IsTruth) runnum = mc_channel_number;
 
     std::vector<float> jetSmearSystW;
 
@@ -554,7 +607,7 @@ bool ZeroLeptonCRY::processEvent(xAOD::TEvent& event)
 
     m_proxyUtils.FillNTVars(m_ntv, runnum, EventNumber, LumiBlockNumber, veto, weight, normWeight, *pileupWeights, genWeight,ttbarWeightHT,ttbarWeightPt2,ttbarAvgPt,WZweight, btag_weight, ctag_weight, b_jets.size(), c_jets.size(), MissingEtCorr, phi_met, Meff, meffincl, minDphi, RemainingminDPhi, good_jets, trueTopo, cleaning, time[0],jetSmearSystW,0, 0., 0.,m_IsTruth,baseline_taus,signal_taus);
 
-    if ( systag == "" ) {
+    if ( systag == ""  && !m_IsTruth ) {
       std::vector<float>* p_systweights = 0;
       if ( ! store->retrieve(p_systweights,"event_weights"+m_suffix).isSuccess() ) throw std::runtime_error("Could not retrieve event_weights"+m_suffix);
       m_ntv.systWeights = *p_systweights;
@@ -568,7 +621,7 @@ bool ZeroLeptonCRY::processEvent(xAOD::TEvent& event)
     FillNTCRYVars(m_cryntv,allphotons,*missingET,vtight,vloose,vtopoetcone20,vptvarcone20,
 		  //visEMTight,
 		  vptcone20, vtopoetcone40,vptvarcone40,vptcone40,
-		  vpt,veta);
+		  vpt,veta,vtruthType,vtruthOrigin,visEMvalue);
       
     if(! m_IsTruth && m_fillReclusteringVars){
       m_proxyUtils.FillNTReclusteringVars(m_RTntv,good_jets);
@@ -595,7 +648,8 @@ void ZeroLeptonCRY::FillNTCRYVars(NTCRYVars& cryntv,
 				  std::vector<float>& vtopoetcone20, std::vector<float>& vptvarcone20,std::vector<float>& vptcone20,
 				  //std::vector<int>& visEMTight,
 				  std::vector<float>& vtopoetcone40, std::vector<float>& vptvarcone40,std::vector<float>& vptcone40,
-				  std::vector<float>& vpt,std::vector<float>& veta)
+				  std::vector<float>& vpt,std::vector<float>& veta, std::vector<int>& vtruthType, std::vector<int>& vtruthOrigin,
+				  std::vector<int>& visEMvalue)
 {
   cryntv.Reset();
   for ( auto phit = photons.begin(); phit!= photons.end(); phit++ ){
@@ -615,8 +669,11 @@ void ZeroLeptonCRY::FillNTCRYVars(NTCRYVars& cryntv,
 	  cryntv.phTopoetcone40.push_back(vtopoetcone40.at(n));
           cryntv.phPtvarcone40.push_back(vptvarcone40.at(n));
           cryntv.phPtcone40.push_back(vptcone40.at(n));
-
+	  cryntv.phTruthType.push_back(vtruthType.at(n));
+          cryntv.phTruthOrigin.push_back(vtruthOrigin.at(n));
+          cryntv.phisEMvalue.push_back(visEMvalue.at(n));
 	  //cryntv.phisEMTight.push_back(visEMTight.at(n));
+	  break;
 	}
       }
     }
