@@ -1,3 +1,6 @@
+26-Aug-2015 Geraldine Conti
+	* Added phTruthType, phTruthOrigin, phisEMvalue needed for ABCD method
+
 14-Aug-2015 Laurent Duflot
 	* MCInfoProcessor: add option to produce a JSON file with hardproc
 	informations to allow building a DB of initial harproc counts
